--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </article>
 
       <article class="card" id="picole2">
-        <img src="./assets/picoles.jpg" alt="Imagem de um picolé amarelo e roxo com metade na diagonal coberto por castanhas.">
+        <img src="./Imagens/picoles.jpg" alt="Imagem de um picolé amarelo e roxo com metade na diagonal coberto por castanhas.">
         <h2>Picolés</h2>
       </article>
   
